--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -31,7 +31,7 @@ $font-wulkan: WulkanDisplay, sans-serif //
   overflow-x: hidden !important
 
 body
-  background: black
+  background: $lighten-bg
   &._lock
     overflow: hidden
   img
