padding for text

--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -31,7 +31,7 @@ $font-wulkan: WulkanDisplay, sans-serif //
   overflow-x: hidden !important
 
 body
-  background: $lighten-bg
+  background: black
   &._lock
     overflow: hidden
   img
@@ -74,14 +74,14 @@ body.dark
 
 .bonus
   overflow: hidden
-  padding: 240px 0 317px
-
+  padding: 240px 0 230px
   &__row
     display: flex
     align-items: center
   &__info
     position: relative
     z-index: 4
+    padding-top: 60px
   &__text-mob
     display: none
   &__text
