--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -9,13 +9,13 @@
                 .bonus__buttons
                     .bonus__buttons-item
                         a(href='https://apps.apple.com/hr/app/favbet-hr/id1494156956?l=hr').bonus__buttons-item-link.bonus__buttons-item-link-appstore
-                            img(src='img/app-store.svg' alt='appstore-link')
+                            img(src='img/app-store.png' alt='appstore-link')
                         .bonus__buttons-item-qr.bonus__buttons-item-qr-appstore
                     .bonus__buttons-vs
                         img(src='img/vs.svg' alt='vs')
                     .bonus__buttons-item
-                        a(href='https://play.google.com/store/apps/details?id=com.betinvest.favbet_3_hr').bonus__buttons-item-link.bonus__buttons-item-link-googleplay
-                            img(src='img/googleplay.svg' alt='google-play-link')
+                        a(href="/minio/android-files/Favbet.apk" data-link-type="raw" download="").bonus__buttons-item-link.bonus__buttons-item-link-googleplay
+                            img(src='img/googleplay.png' alt='google-play-link')
                         .bonus__buttons-item-qr.bonus__buttons-item-qr-googleplay
             .bonus__image
                 .bonus__image-wrap
