--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -81,7 +81,7 @@
 
 @media screen and (max-width: 580px)
   .bonus
-    padding: 35px 0 40px
+    padding: 35px 0 60px
     &__text
       font-size: 30px
       line-height: normal
@@ -93,7 +93,7 @@
         padding: 0 7px
     &__info
       transform: scale(1)
-      margin-top: 30px
+      margin-top: 0
     &__image
       transform: scale(0.55)
       top: -514px
@@ -130,13 +130,9 @@
           height: 52px
           margin: 0
           &-appstore
-            margin: 0 10px 0 0
-            padding: 0
-            img
-              max-width: 162px
-          &-googleplay
-            img
-              max-width: 130px
+            margin-right: 10px
+          img
+            max-width: 134px
 
 @media screen and (max-width: 370px)
   .bonus
