--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -123,8 +123,8 @@ body.dark
         transition: background-color .3s ease
         &:hover
           background: $new-gray
-        &-appstore
-          padding: 0
+        img
+          max-width: 180px
       &-qr
         height: 68px
         width: 68px
