--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -36,6 +36,8 @@
     padding: 35px 0 30px
     .container
       min-width: auto
+    &__info
+      padding-top: 0
     &__row
       flex-direction: column-reverse
       transform: scale(1)
@@ -94,33 +96,11 @@
     &__info
       transform: scale(1)
       margin-top: 0
+      padding-top: 60px
     &__image
       transform: scale(0.55)
       top: -514px
       margin: 0 0 -1030px 0
-    //&__text-mob
-    //  display: flex
-    //  flex-direction: column
-    //  align-items: flex-start
-    //  font-size: 30px
-    //  line-height: 39px
-    //  color: $new-gray
-    //  text-transform: uppercase
-    //  margin: 0 0 10px 0
-    //  &-top
-    //    padding: 0 7px
-    //    background: $magenta
-    //    font-family: $font-suisse-med
-    //  &-center
-    //    padding: 0 7px
-    //    background: $magenta
-    //    font-family: $font-suisse-med
-    //    span
-    //      font-family: $font-wulkan
-    //  &-bottom
-    //    padding: 0 7px
-    //    background: $magenta
-    //    font-family: $font-suisse-med
     &__buttons
       margin: 0
       &-vs
