--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -17,27 +17,16 @@ $font-suisse-semb: SuisseIntl-SemiBold, sans-serif // 600 //
 $font-suisse-bold: SuisseIntl-Bold, sans-serif
 $font-wulkan: WulkanDisplay, sans-serif //
 
-.btn-btn
-  position: absolute
-  top: 20px
-  display: block
-  left: 20px
-  width: 100px
-  height: 50px
-  z-index: 1000
-  text-align: center
-
 .overflow
   overflow-x: hidden !important
 
 body
-  background: black
+  background: $lighten-bg
   &._lock
     overflow: hidden
   img
     max-width: 100%
     height: auto
-
 
 body.light
   .bonus
